--- a/src/Card.css
+++ b/src/Card.css
@@ -44,6 +44,23 @@
     justify-content: center;
 }
 
-.buttons_container > button {
-    margin: 10px;
+.buttons_container > :first-child {
+    display: flex;
+    flex-direction: column;
+    background-color: brown;
+    width: 100%;
+}
+
+.buttons_container > :nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    background-color: yellow;
+    width: 100%;
+}
+
+.buttons_container > :nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    background-color: blue;
+    width: 100%;
 }
