--- a/src/Card.css
+++ b/src/Card.css
@@ -125,3 +125,133 @@
     font-size: 7px;
     letter-spacing: 1px;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .main_container {
+        position: absolute;
+        background-color: bisque;
+        width: 100%;
+        height: 100%;
+        top: 50%;
+        left: 50%; 
+        display: flex;
+        flex-direction: column;
+        /* transform: translate(-50%, -50%); */
+    }
+
+    .pokemon_name {
+        position: relative;
+        margin-top: 0;
+        top: 0;
+        color: aliceblue;
+        letter-spacing: 2px;
+        background-color: #0e4217;
+        font-family: 'Pokemon Solid', sans-serif;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-left: 2px solid black;
+        border-right: 2px solid black;
+    }
+
+    .content-container {
+        background-color: #c9c66f;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .text-content {
+        border-right: 2px solid black;
+        flex-grow: 1;
+        padding-left: 10px;
+    }
+
+    .text-content > p {
+        text-align: left;
+        font-family: 'Pokemon Solid', sans-serif;
+        font-size: 7px;
+        letter-spacing: 1px;
+    }
+
+    .main_img {
+        position: relative;
+        background-color: #809a45;
+        height: 300px;
+        width: 300px;
+        border-left: 2px solid black;
+        border-right: 2px solid black;
+    }
+
+    .main_img > img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+    }
+
+    .buttons_container {
+        background-color: blueviolet;
+        position: relative;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .buttons_container > :first-child {
+        display: flex;
+        flex-direction: column;
+        background-color: #459a5f;
+        width: 100%;
+        padding: 20px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-left: 2px solid black;
+    }
+
+    .buttons_container > :first-child > button {
+        margin: 10px;
+        background-color: #be7251;
+        font-family: 'Pokemon Solid', sans-serif;
+        font-size: 7px;
+        letter-spacing: 1px;
+    }
+
+    .buttons_container > :nth-child(2) {
+        display: flex;
+        flex-direction: column;
+        background-color: #9a8c45;
+        width: 100%;
+        padding: 20px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-left: 2px solid black;
+        border-right: 2px solid black;
+    }
+
+    .buttons_container > :nth-child(2) > button {
+        margin: 10px;
+        background-color: #be7251;
+        font-family: 'Pokemon Solid', sans-serif;
+        font-size: 7px;
+        letter-spacing: 1px;
+    }
+
+    .buttons_container > :nth-child(3) {
+        display: flex;
+        flex-direction: column;
+        background-color: #459a8d;
+        width: 100%;
+        padding: 20px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-right: 2px solid black;
+    }
+
+    .buttons_container > :nth-child(3) > button {
+        margin: 10px;
+        background-color: #be7251;
+        font-family: 'Pokemon Solid', sans-serif;
+        font-size: 7px;
+        letter-spacing: 1px;
+    }
+
+  }
